# dio-twitter-py

./: .editorconfig  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
src/: connection.py  constants.py  responses.py  secrets.py  services.py
tests/: test_service.py
